fix: image gallery spacing

--- a/packages/gatsby-theme-carbon/src/components/ImageGallery/ImageGalleryImage.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/ImageGallery/ImageGalleryImage.module.scss
@@ -1,3 +1,7 @@
+.figure {
+  margin-bottom: 1.5rem;
+}
+
 .image-button-wrapper {
   border: 0;
   background: none;
